# drovity

./: .gitignore  CHANGELOG.md  Cargo.toml  EXAMPLES.md  README.md  SERVER_SETUP_GUIDE.md  install.ps1  install.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml.bak
src/: constants.rs  daemon.rs  factory.rs  main.rs  oauth.rs
src/cli/: accounts.rs  factory_setup.rs  menu.rs  mod.rs  proxy_menu.rs
src/config/: account.rs  mod.rs  proxy.rs
src/proxy/: claude_converter.rs  config.rs  mod.rs  project_resolver.rs  server.rs
src/proxy/claude/: mod.rs  request.rs
src/proxy/common/: mod.rs
src/proxy/mappers/: mod.rs
