[package]
name = "drovity"
version = "1.1.1"
edition = "2021"
authors = ["Drovity Contributors"]
description = "CLI proxy for Google Gemini API with Factory Droid integration"
license = "MIT"

[dependencies]
# HTTP server and client
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "socks", "native-tls-vendored", "blocking"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

# CLI
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"

# Utilities
chrono = "0.4"
uuid = { version = "1.10", features = ["v4", "serde"] }
dirs = "5.0"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Async utilities
futures = "0.3"
tokio-stream = { version = "0.1.17", features = ["sync"] }
async-stream = "0.3.6"
pin-project = "1.1"
bytes = "1.5"

# Crypto
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"

# Others
url = "2.5"
dashmap = "6.1"
once_cell = "1.19"
regex = "1.12"
eventsource-stream = "0.2"

# Daemon support (Unix only)
[target.'cfg(unix)'.dependencies]
daemonize = "0.5"
nix = { version = "0.29", features = ["signal", "fs"] }
